2004-11-23  Alp Toker  <alp@atoker.com>

	* CodeCompletion/CodeCompletionData.cs:
	* CodeCompletion/CompletionListWindow.cs:
	* CodeCompletion/CodeCompletionDataProvider.cs:
	Initial code completion support for overloaded methods.

2004-10-12  Gert Driesen <drieseng@users.sourceforge.net>

	* Commands/SearchCommands.cs: use alias to work around mcs change
	* Search/SearchReplaceManager.cs
	* Search/DocumentIterator/EditorDocumentInformation.cs
	* Search/DocumentIterator/CurrentDocumentIterator.cs
	* Search/DocumentIterator/DirectoryDocumentIterator.cs
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs
	* Search/DocumentIterator/AllOpenDocumentIterator.cs

2004-10-04  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorView.cs:
	* CodeCompletion/ListWindow.cs: Need to use System.Char w/
	gtk-sharp-2-0 for some reason. Not sure why.

2004-09-18  Lluis Sanchez Gual  <lluis@ximian.com>

	* Gui/SourceEditorView.cs: Use the new completion window.
	* CodeCompletion/CompletionListWindow.cs: New completion window for the
	source editor.
	* CodeCompletion/ListWindow.cs: The list window from which
	CompletionListWindow inherits.
	* Search/SearchReplaceInFilesManager.cs: Catch exceptions during search and
	replace, and show an error message in this case.
	* Search/TextIterator/ForwardTextFileIterator.cs: File.Move does not allow
	overwriting files. Changed to Copy.
	* Makefile.am: Added new files.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-05  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorDisplayBinding.cs:
	* Gui/SourceEditorView.cs: remove pinvokes where possible
	anything that needs to be done in unmanaged code needs to go
	to gtksourceview-sharp, except g_utf8_validate for now

2004-07-01  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionWindow.cs: Fix bug #61020, by marking the
	completion window a transient for the main window.

2004-07-01  Todd Berman  <tberman@off.net>
